public enum Dificultad {
    FACIL,
    NORMAL,
    DIFICIL,
    EXTREMO
}
